Added simple dictionary/hash table implementation.

--- a/Makefile.vc
+++ b/Makefile.vc
@@ -15,7 +15,7 @@ FFTW3F_LIBS=..\fftw\libfftw3f-3.lib
 
 ### End constants section ###
 
-SRCS=airmass.c ap.c background.c bary.c cholesky.c cnf.c const.c cvtunit.c dplate.c dtai.c dtdb.c filt1d.c fpcoord.c geoc.c iers.c jpleph.c matvec.c mjd.c mount.c mpc.c observer.c parallactic.c prenut.c qr.c refract.c rng.c shuffle.c skylevel.c sort.c source.c strutil.c stumpff.c sysinfo.c util.c wcs.c
+SRCS=airmass.c ap.c background.c bary.c cholesky.c cnf.c const.c cvtunit.c dict.c dplate.c dtai.c dtdb.c filt1d.c fpcoord.c geoc.c iers.c jpleph.c matvec.c mjd.c mount.c mpc.c observer.c parallactic.c prenut.c qr.c refract.c rng.c shuffle.c skylevel.c sort.c source.c strutil.c stumpff.c sysinfo.c util.c wcs.c
 OBJS=$(SRCS:.c=.obj)
 
 EXTRA_SRCS=fftutil.c fitsutil.c lautil.c tcutil.c
